first draft! - added Abstract

--- a/Proposals/Proposal.tex
+++ b/Proposals/Proposal.tex
@@ -26,6 +26,11 @@
 
 \maketitle
 
+\begin{abstract}
+\noindent A powerful tool to enable researchers to analyze and filter large datasets from fish trawl surveys in order to perform environmental research on fish and / or invertebrate populations. Gives researchers the ability to intelligently filter and query datasets based on biological indicators such as family, genus or species, or based on location or timeframe. Advanced outputs include statistical data on relative population abundance as a function of time and geographical distribution. Additionally, TrawlExpert gives an advanced tool for finding local subpopulations within a larger query. A dataset of thousands of Great Lakes trawl surveys from 1958-2016 will be used as a demonstration of TrawlExpert's capability to help researchers narrow down large datasets and glean data which pertains to their research. TrawlExpert will be designed to be used easily and effectively as a first step in a groundbreaking climate and ecological research pipeline.
+
+\end{abstract}
+
 \section{Objective}
 Statistical and visual tool for the analysis of water ecosystems, based on scientific water trawl data. Provides researchers with tools to analyze large datasets to find patterns in fish populations, including the plotting of historical population data on a map, analyzing population trends over time and finding subpopulations of a certain species, genus, family, etc.
 
