--- a/Proposals/bib.bib
+++ b/Proposals/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mac Outreach Admin at 2018-01-28 16:27:03 -0500 
+%% Created for Mac Outreach Admin at 2018-01-29 13:16:46 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -52,9 +52,9 @@
 	Year = {1987}}
 
 @webpage{michseagr2018,
-	Author = {{University of Michigan}, {Michigan State University}},
+	Author = {{University of Michigan}; {Michigan State University}},
 	Date-Added = {2018-01-28 20:59:17 +0000},
-	Date-Modified = {2018-01-28 21:03:10 +0000},
+	Date-Modified = {2018-01-29 18:16:39 +0000},
 	Title = {Michigan Sea Grant},
 	Url = {http://www.miseagrant.umich.edu/},
 	Year = {2018}}
