--- a/Proposals/bib.bib
+++ b/Proposals/bib.bib
@@ -1,53 +1,61 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mac Outreach Admin at 2018-01-29 13:16:46 -0500 
+%% Created for Mac Outreach Admin at 2018-01-29 21:28:47 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@url{plosblog2014,
+	Author = {Roberts, Roli},
+	Date-Added = {2018-01-30 02:17:52 +0000},
+	Date-Modified = {2018-01-30 02:23:37 +0000},
+	Title = {How do you like your fish? {P}hylogenised!},
+	Url = {http://blogs.plos.org/biologue/2013/05/13/how-do-you-like-your-fish-phylogenised/},
+	Year = {2013}}
+
 @article{swartzman1992spatial,
 	Author = {Swartzman, Gordon and Huang, Chisheng and Kaluzny, Stephen},
 	Date-Added = {2018-01-28 21:20:59 +0000},
-	Date-Modified = {2018-01-28 21:20:59 +0000},
+	Date-Modified = {2018-01-30 02:27:15 +0000},
 	Journal = {Canadian Journal of Fisheries and Aquatic Sciences},
 	Number = {7},
 	Pages = {1366--1378},
 	Publisher = {NRC Research Press},
-	Title = {Spatial analysis of Bering Sea groundfish survey data using generalized additive models},
+	Title = {Spatial analysis of {Bering Sea} groundfish survey data using generalized additive models},
 	Volume = {49},
 	Year = {1992}}
 
 @article{chakraborty1996stock,
 	Author = {Chakraborty, SK},
 	Date-Added = {2018-01-28 21:16:25 +0000},
-	Date-Modified = {2018-01-28 21:16:25 +0000},
+	Date-Modified = {2018-01-30 02:28:47 +0000},
 	Journal = {Journal of the Indian Fisheries Association},
 	Pages = {9--15},
-	Title = {Stock assessment of sin croaker Johnieops sina (Cuvier) from Bombay waters},
+	Title = {Stock assessment of sin croaker {Johnieops sina (Cuvier) from Bombay waters}},
 	Volume = {26},
 	Year = {1996}}
 
 @article{levi1993analysis,
 	Author = {Levi, Dino and Andreoli, MG and Giusto, GB},
 	Date-Added = {2018-01-28 21:13:15 +0000},
-	Date-Modified = {2018-01-28 21:13:15 +0000},
+	Date-Modified = {2018-01-30 02:28:07 +0000},
 	Journal = {Fisheries research},
 	Number = {3-4},
 	Pages = {333--341},
 	Publisher = {Elsevier},
-	Title = {An analysis based on trawl-survey data of the state of the `Italian'stock of Mullus barbatus in the Sicilian Channel, including management advice},
+	Title = {An analysis based on trawl-survey data of the state of the `{Italian}' stock of {Mullus barbatus in the Sicilian Channel}, including management advice},
 	Volume = {17},
 	Year = {1993}}
 
 @book{sparre1987computer,
 	Author = {Sparre, Per},
 	Date-Added = {2018-01-28 21:10:03 +0000},
-	Date-Modified = {2018-01-28 21:10:03 +0000},
+	Date-Modified = {2018-01-30 02:25:46 +0000},
 	Publisher = {Food \& Agriculture Org.},
-	Title = {Computer programs for fish stock assessment: Length-based fish stock assessment for Apple II computers},
+	Title = {Computer programs for fish stock assessment: {Length-based fish stock assessment for Apple II computers}},
 	Volume = {2},
 	Year = {1987}}
 
@@ -93,11 +101,11 @@
 @webpage{michigan2017,
 	Author = {Ronald Kinnunen},
 	Date-Added = {2018-01-26 14:35:05 +0000},
-	Date-Modified = {2018-01-26 14:37:31 +0000},
+	Date-Modified = {2018-01-30 02:24:16 +0000},
 	Journal = {Michigan State University Extension},
 	Keywords = {28},
 	Month = {February},
-	Title = {Great Lakes prey fish populations declining},
+	Title = {{Great Lakes} prey fish populations declining},
 	Url = {http://msue.anr.msu.edu/news/great_lakes_prey_fish_populations_declining_msg17_kinnunen17},
 	Year = {2017},
 	Bdsk-Url-1 = {http://msue.anr.msu.edu/news/great_lakes_prey_fish_populations_declining_msg17_kinnunen17}}
